# symengine.f90

./: CMakeLists.txt  README.md  fpm.toml
.github/workflows/: ci.yml
src/: CMakeLists.txt  basic.f90  build_script.sh  constants.f90  conversion.f90  dense_matrix.f90  exceptions.f90  functions.f90  sets.f90  symengine.f90  symengine.fypp  symengine_basic.f90  symengine_cwrapper.fypp  symengine_interface.f90  symengine_rational.f90  symengine_symbol.f90  test.f08  test_symengine.f90  wrapper.c
src/tests/: CMakeLists.txt  test_basic.f90
test/: test.f90  test_basic.f90
